; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_push_to_checkout.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_push_to_checkout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"GIT_WORK_TREE=%s\00", align 1
@push_to_checkout_hook = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"push-to-checkout hook declined\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, %struct.argv_array*, i8*)* @push_to_checkout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @push_to_checkout(i8* %0, %struct.argv_array* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.argv_array*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.argv_array* %1, %struct.argv_array** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load %struct.argv_array*, %struct.argv_array** %6, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = call i32 @absolute_path(i8* %9)
  %11 = call i32 @argv_array_pushf(%struct.argv_array* %8, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.argv_array*, %struct.argv_array** %6, align 8
  %13 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @push_to_checkout_hook, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @hash_to_hex(i8* %16)
  %18 = call i64 @run_hook_le(i32 %14, i32 %15, i32 %17, i32* null)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8** %4, align 8
  br label %22

21:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i32 @argv_array_pushf(%struct.argv_array*, i8*, i32) #1

declare dso_local i32 @absolute_path(i8*) #1

declare dso_local i64 @run_hook_le(i32, i32, i32, i32*) #1

declare dso_local i32 @hash_to_hex(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
